<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_preset_dialog_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:padding="10dp"
        android:textAppearance="@style/LapseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/generic_dismiss"
        android:textSize="20sp"
        android:padding="10dp"
        android:textAppearance="@style/LapseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:id="@+id/btn_dismiss"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_save"
        android:layout_toStartOf="@+id/btn_save" />

    <TextView
        android:text="@string/generic_save"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/LapseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/seperator"
        android:background="@color/primary_text_default_material_very_light"
        android:layout_below="@+id/btn_dismiss"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/name_hint"
        android:layout_below="@id/seperator"
        android:textAppearance="@style/LapseText"
        android:text="@string/add_preset_name_hint"
        android:gravity="center_vertical" />
    <EditText
        android:id="@+id/txt_preset_name"
        android:inputType="text"
        android:layout_below="@id/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#d2131313"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/desc_hint"
        android:layout_below="@id/txt_preset_name"
        android:textAppearance="@style/LapseText"
        android:text="@string/add_preset_name_hint"
        android:gravity="center_vertical" />
    <EditText
        android:id="@+id/txt_preset_description"
        android:layout_below="@id/desc_hint"
        android:inputType="textMultiLine"
        android:lines="3"
        android:textColor="#d2131313"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>